--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -1,44 +1,14 @@
 // Place all the styles related to the Carts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
 .carts {
-    table{
-        border-collapse: collapse;
-    }
-    td {
-        padding: 0.5em;
-    }
-    td.quantity{
-        white-space: nowrap;
-    }
-    td.quantity::after{
-        content: " x";
-    }
-    td.price{
-        font-weight: bold;
-        text-align: right;
-    }
-    tfoot{
-        th,th.price{
-            font-weight: bold;
-            padding-top: 1em;
+     .item_price, .total_line {
+     text-align: right;
+     }
+    
+     .total_line .total_cell {
+     font-weight: bold;
+     border-top: 1px solid #595;
+     }
         }
-        th{
-            text-align: right;
-        }
-        th.price{
-            border-top: solid thin;
-        }
-    }
-    input[type="submit"]{
-        background-color: #881;
-        border-radius: 0.354em;
-        border: solid thin #441;
-        color : white;
-        font-size: 1em;
-        padding: 0.354em 1em;
-    }
-    input[type="submit"]{
-        background-color: #992;
-    }
-}
