--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,3 +1,4 @@
-cart = document.getElementById("cart")
-cart.innerHTML = "<%= j render(@cart)%>"
+$('#cart').html("<%=j render(@cart) %>");
+
+$('#current_item').css({'background-color':'#88ff88'}).animate({'background-color':'#114411'}, 1000);
 
