--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -6,5 +6,6 @@
  <td class="total_cell"><%= sprintf("₴%0.02f", cart.total_price) %></td>
 </tr>
 </table>
+<%= button_to "Checkout", new_order_path, method: :get %>
  <%= button_to 'Empty cart', cart, method: :delete,
 data: { confirm: 'Are you sure?' } %>
