--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,4 +1,6 @@
-<section class="depot_form">
- <h1>Please Enter Your Details</h1>
- <%= render 'form', order: @order %>
-</section>
+<div class="depot_form">
+<fieldset>
+<legend>Please Enter Your Details</legend>
+<%= render 'form', order: @order %>
+</fieldset>
+</div>
