--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
-<h1>Your Pragmatic Catalog</h1>
+<h1> <%= t( '.title_html' ) %> </h1>
 <% @products.each do |product| %>
-<div class="entry">
-<%= link_to image_tag(product.image_url), line_items_path(product_id: product), method: :post ,remote: true %>
-<h3><%= product.title %></h3>
-<%= sanitize(product.description) %>
-<div class="price_line">
-<span class="price"><%= sprintf("₴%0.02f", product.price) %></span>
-<%= button_to 'Add to Cart', line_items_path(product_id: product), remote: true %>
-</div>
-</div>
+    <div class="entry">
+        <%= link_to image_tag(product.image_url), line_items_path(product_id: product), method: :post ,remote: true %>
+        <h3><%= product.title %></h3>
+        <%= sanitize(product.description) %>
+        <div class="price_line">
+            <span class="price"><%= number_to_currency(product.price) %></span>
+            <%= button_to t('.add_html'),line_items_path(product_id: product, locale: I18n.locale),remote: true %>
+        </div>
+    </div>
 <% end %>
